# Composer

./: .cursorrules  .gitignore  Dockerfile  README.md  composer.py  docker-compose.yml  latest_plan.yaml  pyproject.toml
config/: settings.py
config/prompt/: architexture.txt  clarification.txt  coding.txt  debug.txt
core/: __init__.py  agent.py  code_generator.py  coder.py  debugger.py  knowledge.py  knowledge_base.py  llm_client.py  planner.py  test_runner.py
core/llm/: __init__.py  deepseek_client.py  factory.py  openai_client.py  prompt.py
tests/: test_agent.py
utils/: __init__.py  file_manager.py  files.py  parser.py  test_runner.py  validation.py
